# wandb-quick-intro

./: .gitignore  README.md  plots.ipynb  pyproject.toml  setup_wandb.ipynb  train_model.ipynb  utils.py  weave.ipynb
hyp_tuning/: config.yaml  readme.md  run_sweep.sh  train.py
