[tool.poetry]
name = "wandb-quick-intro"
version = "0.1.0"
description = ""
authors = ["lucacorbucci <corbuccilu@gmail.com>"]
readme = "README.md"
packages = [{include = "wandb_quick_intro"}]

[tool.poetry.dependencies]
python = "^3.9"
wandb = "^0.16.3"
ipykernel = "^6.29.2"
torch = "^2.2.0"
torchvision = "^0.17.0"
matplotlib = "^3.8.3"
pandas = "^2.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
