[tool.poetry]
name = "wandb-quick-intro"
version = "0.1.0"
description = ""
authors = ["lucacorbucci <corbuccilu@gmail.com>"]
readme = "README.md"
packages = [{include = "wandb_quick_intro"}]

[tool.poetry.dependencies]
python = "^3.9"
wandb = "^0.16.3"
ipykernel = "^6.29.2"
torch = "^2.2.0"
torchvision = "^0.17.0"
matplotlib = "^3.8.3"
pandas = "^2.2.0"
ruff = "^0.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[tool.ruff.isort]
case-sensitive = true
combine-as-imports = true

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true





